Bug 1796162 experiment: Use an array for AccAttributes instead of a hash map.